[package]
name = "comfy_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
comfy = {git = "https://github.com/darthdeus/comfy.git", branch = "master"}
num-traits = "0.2.18"

[profile.dev]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3
